--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRCS "ds18b20_node.c" "mesh_main.c"
                         "legacy_proto.c"
                         "ds18b20_node.c"
-                    PRIV_REQUIRES esp_wifi esp_driver_gpio esp_driver_ledc nvs_flash
+                        "tds_node.c"
+                    PRIV_REQUIRES esp_wifi esp_driver_gpio esp_driver_ledc nvs_flash esp_adc driver 
                     INCLUDE_DIRS "." "include")
