--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,8 @@
-idf_component_register(SRCS "ds18b20_node.c" "mesh_main.c"
+idf_component_register(SRCS "legacy_root_sender.c" "ds18b20_node.c" "mesh_main.c"
                         "legacy_proto.c"
                         "ds18b20_node.c"
                         "tds_node.c"
                         "stack_monitor.c"
+                        "legacy_root_sender.c"
                     PRIV_REQUIRES esp_wifi esp_driver_gpio esp_driver_ledc nvs_flash esp_adc driver 
                     INCLUDE_DIRS "." "include")
